[package]
name = "rustlr"
version = "0.3.8"
authors = ["Chuck Liang"]
edition = "2021"
license = "MIT"
description = "LR parser generator that can automatically create ASTs"
repository = "https://github.com/chuckcscccl/rustlr/"
keywords = ["parser", "parsing", "parser-generator", "lr", "yacc"]
categories = ["parsing", "compilers"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
#termion = "*"

#[patch.crates-io]
#termion = { git = "https://gitlab.redox-os.org/Jezza/termion.git", branch = "windows-support" }
