[package]
name = "rustlr"
version = "0.3.93"
authors = ["Chuck Liang"]
edition = "2021"
license = "MIT"
description = "Bottom-Up Parser Generator with Advanced Options"
repository = "https://github.com/chuckcscccl/rustlr/"
keywords = ["parser", "parsing", "parser-generator", "lr", "yacc"]
categories = ["parsing", "compilers"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
bumpalo = "3"

#termion = "*"

#[patch.crates-io]
#termion = { git = "https://gitlab.redox-os.org/Jezza/termion.git", branch = "windows-support" }
